@@ -1,22 +1,29 @@
 package de.imi.mopat.helper.controller;
 
+import de.imi.mopat.dao.user.AclClassDao;
+import de.imi.mopat.dao.user.AclObjectIdentityDao;
 import de.imi.mopat.dao.BundleDao;
 import de.imi.mopat.dao.BundleQuestionnaireDao;
+import de.imi.mopat.dao.ExportTemplateDao;
 import de.imi.mopat.dao.QuestionnaireDao;
 import de.imi.mopat.dao.ScoreDao;
+import de.imi.mopat.helper.model.BundleDTOMapper;
 import de.imi.mopat.helper.model.QuestionnaireDTOMapper;
 import de.imi.mopat.model.Bundle;
 import de.imi.mopat.model.BundleQuestionnaire;
+import de.imi.mopat.model.ExportTemplate;
 import de.imi.mopat.model.Questionnaire;
+import de.imi.mopat.model.dto.BundleDTO;
+import de.imi.mopat.model.dto.BundleQuestionnaireDTO;
 import de.imi.mopat.model.dto.QuestionnaireDTO;
-import java.util.Comparator;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
+
+import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
+import de.imi.mopat.model.user.AclObjectIdentity;
+import de.imi.mopat.model.user.User;
+import de.imi.mopat.model.user.UserRole;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -38,17 +45,52 @@ public class BundleService {
     private BundleQuestionnaireDao bundleQuestionnaireDao;
     @Autowired
     private QuestionnaireService questionnaireService;
+    @Autowired
+    private AuthService authService;
+    @Autowired
+    private ExportTemplateDao exportTemplateDao;
+    @Autowired
+    private AclClassDao aclClassDao;
+    @Autowired
+    private AclObjectIdentityDao aclObjectIdentityDao;
+    @Autowired
+    private BundleDTOMapper bundleDTOMapper;
 
     /**
-     * Retrieves all available {@link QuestionnaireDTO} objects that are not currently assigned
-     * to the {@link Bundle} with the given ID. This method filters out any questionnaires that
-     * have no associated questions and sorts the results first by group name, then by group ID,
-     * and finally by version.
+     * Retrieves a BundleDTO for the given bundle ID.
      *
-     * @param bundleId The ID of the {@link Bundle} from which unassigned questionnaires should be retrieved.
-     * @return A sorted list of {@link QuestionnaireDTO} objects that are not assigned to the specified bundle
-     *         and contain at least one question. If the bundle ID is null or not found, all available questionnaires
-     *         are returned.
+     * @param id The ID of the bundle.
+     * @return The corresponding BundleDTO or a new instance if the bundle is not found.
+     */
+    public BundleDTO getBundleDTO(final Long id) {
+        if (id == null || id <= 0) {
+            return new BundleDTO();
+        }
+
+        Bundle bundle = bundleDao.getElementById(id);
+        if (bundle == null) {
+            return new BundleDTO();
+        }
+
+        BundleDTO bundleDTO = bundleDTOMapper.apply(true, bundle);
+
+        bundleDTO.getBundleQuestionnaireDTOs().forEach(bundleQuestionnaireDTO -> {
+            QuestionnaireDTO questionnaireDTO = bundleQuestionnaireDTO.getQuestionnaireDTO();
+            if (questionnaireDTO != null && questionnaireDTO.getId() != null) {
+                questionnaireDTO.setHasScores(scoreDao.hasScore(questionnaireDao.getElementById(questionnaireDTO.getId())));
+            }
+        });
+
+        return bundleDTO;
+    }
+
+
+    /**
+     * Retrieves all questionnaires that are not assigned to the given bundle.
+     * The list is sorted by group name, group ID, and version.
+     *
+     * @param bundleId The ID of the bundle.
+     * @return A sorted list of unassigned questionnaires.
      */
     public List<QuestionnaireDTO> getAvailableQuestionnaires(final Long bundleId) {
         Optional<Bundle> bundle = findBundleById(bundleId);
@@ -69,7 +111,7 @@ public class BundleService {
                         Comparator.comparing(QuestionnaireDTO::getQuestionnaireVersionGroupName, String::compareToIgnoreCase)
                                 .thenComparing(QuestionnaireDTO::getQuestionnaireVersionGroupId)
                                 .thenComparing(QuestionnaireDTO::getVersion))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -125,6 +167,185 @@ public class BundleService {
         return resultSet;
     }
 
+    public boolean isBundleModifiable(BundleDTO bundleDTO) {
+        return bundleDTO.getId() == null || bundleDao.getElementById(bundleDTO.getId()).isModifiable();
+    }
+
+    /**
+     * Prepares a bundle for editing by cleaning text fields and ensuring
+     * that non-admin users cannot publish the bundle.
+     *
+     * @param bundleDTO The bundle to prepare.
+     */
+    public void prepareBundleForEdit(BundleDTO bundleDTO) {
+        cleanUpTextFields(bundleDTO);
+
+        if (!authService.hasExactRole(UserRole.ROLE_ADMIN)) {
+            bundleDTO.setIsPublished(false);
+        }
+
+        removeUnassignedBundleQuestionnaires(bundleDTO);
+    }
+
+    public void cleanUpTextFields(BundleDTO bundleDTO) {
+        bundleDTO.setLocalizedWelcomeText(cleanUpLocalizedText(bundleDTO.getLocalizedWelcomeText()));
+        bundleDTO.setLocalizedFinalText(cleanUpLocalizedText(bundleDTO.getLocalizedFinalText()));
+    }
+
+    private SortedMap<String, String> cleanUpLocalizedText(SortedMap<String, String> textMap) {
+        textMap.replaceAll((key, value) -> ("<p><br></p>".equals(value) || "<br>".equals(value)) ? "" : value);
+        return textMap;
+    }
+
+    private void removeUnassignedBundleQuestionnaires(BundleDTO bundleDTO) {
+        bundleDTO.getBundleQuestionnaireDTOs().removeIf(
+                bq -> bq.getQuestionnaireDTO() == null || bq.getQuestionnaireDTO().getId() == null
+        );
+    }
+
+    /**
+     * Synchronizes assigned and available questionnaires.
+     * Ensures that assigned questionnaires are removed from the available list
+     * and updates missing data (ExportTemplates, QuestionnaireGroup, Scores) for assigned questionnaires.
+     *
+     * @param bundleQuestionnaireDTOS The list of assigned questionnaires.
+     * @param availableQuestionnaireDTOs The list of available questionnaires.
+     */
+    public void syncAssignedAndAvailableQuestionnaires(List<BundleQuestionnaireDTO> bundleQuestionnaireDTOS, List<QuestionnaireDTO> availableQuestionnaireDTOs) {
+        Set<Long> assignedIds = bundleQuestionnaireDTOS.stream()
+                .map(BundleQuestionnaireDTO::getQuestionnaireDTO)
+                .filter(Objects::nonNull)
+                .map(QuestionnaireDTO::getId)
+                .collect(Collectors.toSet());
+
+        List<QuestionnaireDTO> assignedQuestionnaires = availableQuestionnaireDTOs.stream()
+                .filter(q -> assignedIds.contains(q.getId()))
+                .toList();
+
+        availableQuestionnaireDTOs.removeAll(assignedQuestionnaires);
+
+        updateMissingQuestionnaireData(bundleQuestionnaireDTOS, assignedQuestionnaires);
+
+        bundleQuestionnaireDTOS.sort(Comparator.comparing(BundleQuestionnaireDTO::getPosition));
+    }
+
+    private void updateMissingQuestionnaireData(List<BundleQuestionnaireDTO> assignedBundleQuestionnaires, List<QuestionnaireDTO> assignedQuestionnaires) {
+        Map<Long, QuestionnaireDTO> assignedQuestionnaireMap = assignedQuestionnaires.stream()
+                .collect(Collectors.toMap(QuestionnaireDTO::getId, Function.identity()));
+
+        assignedBundleQuestionnaires.forEach(abq -> {
+            QuestionnaireDTO assignedQuestionnaire = assignedQuestionnaireMap.get(abq.getQuestionnaireDTO().getId());
+            if (assignedQuestionnaire != null) {
+                abq.getQuestionnaireDTO().setExportTemplates(assignedQuestionnaire.getExportTemplates());
+                abq.getQuestionnaireDTO().setQuestionnaireGroupDTO(assignedQuestionnaire.getQuestionnaireGroupDTO());
+                abq.getQuestionnaireDTO().setHasScores(assignedQuestionnaire.getHasScores());
+            }
+        });
+    }
+
+    /**
+     * Saves or updates the given bundle.
+     * If the bundle does not exist, it is created. Otherwise, it is updated.
+     *
+     * @param bundleDTO The bundle data.
+     */
+    public void saveOrUpdateBundle(BundleDTO bundleDTO) {
+        User currentUser = authService.getAuthenticatedUser();
+
+        Bundle bundle = (bundleDTO.getId() != null)
+                ? bundleDao.getElementById(bundleDTO.getId())
+                : new Bundle();
+
+        updateBundleProperties(bundle, bundleDTO, currentUser);
+
+        if (bundle.getId() == null) {
+            bundleDao.merge(bundle);
+            createAclEntry(bundle, currentUser);
+        } else {
+            cleanupRemovedBundleQuestionnaires(bundle);
+        }
+
+        persistBundleQuestionnaires(bundleDTO, bundle);
+
+        boolean isNotAdmin = !authService.hasExactRole(UserRole.ROLE_ADMIN);
+        boolean hasNoQuestionnaires = bundle.getBundleQuestionnaires().isEmpty();
+        if (isNotAdmin || hasNoQuestionnaires) {
+            bundleDTO.setIsPublished(false);
+        }
+
+        bundleDao.merge(bundle);
+    }
+
+    private void persistBundleQuestionnaires(BundleDTO bundleDTO, Bundle bundle) {
+        if (bundleDTO.getBundleQuestionnaireDTOs() == null || bundleDTO.getBundleQuestionnaireDTOs().isEmpty()) {
+            return;
+        }
+
+        for (BundleQuestionnaireDTO bundleQuestionnaireDTO : bundleDTO.getBundleQuestionnaireDTOs()) {
+            if (bundleQuestionnaireDTO.getQuestionnaireDTO() == null || bundleQuestionnaireDTO.getQuestionnaireDTO().getId() == null) {
+                continue;
+            }
+
+            Questionnaire questionnaire = questionnaireDao.getElementById(bundleQuestionnaireDTO.getQuestionnaireDTO().getId());
+            BundleQuestionnaire bundleQuestionnaire = new BundleQuestionnaire(
+                    bundle,
+                    questionnaire,
+                    bundleQuestionnaireDTO.getPosition().intValue(),
+                    Optional.ofNullable(bundleQuestionnaireDTO.getIsEnabled()).orElse(false),
+                    Optional.ofNullable(bundleQuestionnaireDTO.getShowScores()).orElse(false)
+            );
+
+            bundleQuestionnaireDTO.getExportTemplates().stream()
+                    .map(exportTemplateDao::getElementById)
+                    .filter(Objects::nonNull)
+                    .forEach(exportTemplate -> {
+                        bundleQuestionnaire.addExportTemplate(exportTemplate);
+                        exportTemplateDao.merge(exportTemplate);
+                    });
+            
+            bundle.addBundleQuestionnaire(bundleQuestionnaire);
+            questionnaire.addBundleQuestionnaire(bundleQuestionnaire);
+            questionnaireDao.merge(questionnaire);
+        }
+    }
+
+    private void updateBundleProperties(Bundle bundle, BundleDTO bundleDTO, User principal) {
+        bundle.setName(bundleDTO.getName());
+        bundle.setChangedBy(principal.getId());
+        bundle.setDescription(bundleDTO.getDescription());
+        bundle.setShowProgressPerBundle(bundleDTO.getShowProgressPerBundle());
+        bundle.setDeactivateProgressAndNameDuringSurvey(bundleDTO.getdeactivateProgressAndNameDuringSurvey());
+        bundle.setLocalizedWelcomeText(bundleDTO.getLocalizedWelcomeText());
+        bundle.setLocalizedFinalText(bundleDTO.getLocalizedFinalText());
+        bundle.setIsPublished(bundleDTO.getIsPublished());
+    }
+
+    private void createAclEntry(Bundle bundle, User currentUser) {
+        AclObjectIdentity bundleObjectIdentity = new AclObjectIdentity(
+                bundle.getId(),
+                Boolean.TRUE,
+                aclClassDao.getElementByClass(Bundle.class.getName()),
+                currentUser,
+                null
+        );
+        aclObjectIdentityDao.persist(bundleObjectIdentity);
+    }
+
+    private void cleanupRemovedBundleQuestionnaires(Bundle bundle) {
+        for (BundleQuestionnaire toDelete : bundle.getBundleQuestionnaires()) {
+            HashSet<ExportTemplate> exportTemplates = new HashSet<>(toDelete.getExportTemplates());
+            toDelete.removeExportTemplates();
+            for (ExportTemplate exportTemplate : exportTemplates) {
+                exportTemplateDao.merge(exportTemplate);
+            }
+            Questionnaire questionnaire = toDelete.getQuestionnaire();
+            questionnaire.removeBundleQuestionnaire(toDelete);
+            questionnaireDao.merge(questionnaire);
+        }
+        bundle.removeAllBundleQuestionnaires();
+        bundleDao.merge(bundle);
+    }
+    
     /**
      * Returns the list of bundles sorted by their name property (ascending).
      *
@@ -135,7 +356,4 @@ public class BundleService {
         bundles.sort(Comparator.comparing(Bundle::getName));
         return bundles;
     }
-
-
-
 }
